--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -30,6 +30,6 @@ jobs:
         id: super-linter
         uses: super-linter/super-linter/slim@v7
         env:
-          DEFAULT_BRANCH: add_rpm-verify
+          DEFAULT_BRANCH: ${{ github.ref_name }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: true
